# dougiesbigtrip

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.client  Dockerfile.server  LICENSE  README.md  claude_changelog.md  docker-compose.yml  eslint.config.js  index.html  nginx-locations.conf  nginx.conf  package.json  plan_to_implement.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml
assets/: CREDITS.md
assets/characters/: ct_player.glb  t_player.glb
assets/maps/: de_douglas.glb  de_douglas.json  de_douglas.navnodes.json  de_greybox.glb  (+1 more)
auth/: counter-douglas-realm.json  init-schema.sql
docs/: art-direction.md  asset-pipeline.md  blender-pipeline.md  connect-and-scoreboard.md  deploy.md  licensing-and-assets.md  navmesh-pipeline.md  netcode.md  plan-bugfixes-and-matchtime.md  plan-bugfixes-round2.md  plan-modelview-cli.md  plan-phase10-movement-tuning.md  plan-phase11-bot-ai.md  plan-phase12-thirdperson-ragdoll.md  plan-phase13-asset-refinement.md  plan-phase9-game-flow.md  plan-post-1.0-config-auth.md  source-movement.md  testing.md  weapon-feel.md
docs-updated-with-testing/: CLAUDE.md  plan_to_implement.md  testing.md
server/: Cargo.toml
server/migrations/: 001_initial.sql
server/src/: ai.rs  auth.rs  db.rs  game.rs  http.rs  main.rs  nav_graph.rs
sim/: Cargo.toml
sim/src/: constants.rs  input.rs  lib.rs  map.rs  movement.rs  protocol.rs  rng.rs  shapecast.rs  world.rs
src/: main.ts
tools/: build_wasm.sh
(+143 files in other folders)
