[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
sim = { path = "../sim" }
nalgebra = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
