[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.35"
rapier3d = "0.34.0"
